Fixed Toolbar's overflow issue

--- a/plugins/toolbar/prism-toolbar.css
+++ b/plugins/toolbar/prism-toolbar.css
@@ -1,4 +1,6 @@
 div.code-toolbar {
+	display: block;
+	overflow: auto;
 	position: relative;
 }
 
